--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         color: #3D9970;
       }
 
+      h3 {
+        font-family: "Gloria Hallelujah";
+        color: #354E71;
+      }
+
       .content, small {
         font-family: "Julius Sans One";
         text-align: center;
@@ -40,6 +45,10 @@
 
       .fa-twitter:hover {
         color: #55ACEE;
+      }
+
+      footer {
+        padding-top: 13%;
       }
 
       footer .col-md-4 {
@@ -79,12 +88,11 @@
       <div class="content">
         <div class="col-md-4"></div>
         <div class="col-md-4">
+          <h3>About</h3>
           i live in London (UK). recent comp sci grad. passionate web developer. stickler to best code practises. camper at freeCodeCamp.
         </div>
         <div class="col-md-4"></div>
       </div>
-
-      <br /><br /><br /><br /><br /><br />
 
       <footer>
         <div class="row">
@@ -93,7 +101,7 @@
             <small>Get in touch:</small><br />
             <a href="https://github.com/hristo-tanev"><i class="fa fa-github fa-3x"></i></a>
             <a href="https://www.linkedin.com/in/hristo-tanev/"><i class="fa fa-linkedin fa-3x"></i></a>
-            <a href=""><i class="fa fa-twitter fa-3x"></i></a>
+            <a href="https://twitter.com/HristoPTanev"><i class="fa fa-twitter fa-3x"></i></a>
           </div>
           <div class="col-md-4"></div>
         </div>
