--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </section>
           <section id="p" class="projects">
             <h3>Projects</h3>
-            well, all my projects are on GitHub... Did you check that?
+            well, all my projects are on GitHub... be sure to check that
           </section>
         </div>
         <div class="col-md-4"></div>
