--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Gloria Hallelujah' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
+    <link rel="stylesheet" href="./static/styles.css" />
     <script>
       function moveRight() {
         document.getElementById('a').style.display = 'none'
@@ -17,102 +18,6 @@
         document.getElementById('a').style.display = 'block'
       }
     </script>
-    <style>
-      a:link, a:visited, a:hover, a:active {
-        color: black;
-      }
-
-      .container {
-        padding-top: 7%;
-      }
-
-      h1 {
-        font-family: "Gloria Hallelujah";
-        color: #3D9970;
-      }
-
-      h3 {
-        font-family: "Gloria Hallelujah";
-        color: #354E71;
-      }
-
-      .content, small {
-        font-family: "Julius Sans One";
-        text-align: center;
-      }
-
-      .fa-chevron-left {
-        left: 0;
-        position: absolute;
-        padding-top: 15%;
-        visibility: hidden;
-      }
-
-      .about {
-        left: 0;
-        position: relative;
-        display: block;
-      }
-
-      .paraphs:hover .fa-chevron-left {
-        visibility: visible;
-      }
-
-      .paraphs:hover .fa-chevron-right {
-        visibility: visible;
-      }
-
-      .fa-chevron-right {
-        right: 0;
-        position: absolute;
-        padding-top: 15%;
-        visibility: hidden;
-      }
-
-      .projects {
-        left: 0;
-        position: relative;
-        display: none;
-      }
-
-      .occ {
-        font-family: "Julius Sans One";
-        font-size: 15px;
-      }
-
-      header .col-md-4 {
-        text-align: center !important;
-      }
-
-      .fa-linkedin:hover {
-        color: #0077B5;
-      }
-
-      .fa-twitter:hover {
-        color: #55ACEE;
-      }
-
-      footer {
-        padding-top: 15%;
-      }
-
-      footer .col-md-4 {
-        text-align: center !important;
-      }
-
-      .fa-github {
-        padding-right: 3%;
-      }
-
-      .fa-linkedin {
-        padding-left: 3%;
-        padding-right: 3%;
-      }
-
-      .fa-twitter {
-        padding-left: 3%;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
