--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="col-md-4">
             <h1>Hristo Tanev</h1>
             <br /><br />
-            <div class="occ">FREELANCE FULLSTACK WEB DEVELOPER.</div>
+            <div class="occ">SOFTWARE ENGINEER @ DEKO</div>
             <br />
             <hr />
           </div>
@@ -42,11 +42,11 @@
           <a onclick="moveRight()"><i class="fa fa-chevron-right"></i></a>
           <section id="a" class="about">
             <h3>About</h3>
-            i live in London (UK). recent comp sci grad. passionate web developer. stickler to best code practises. camper at freeCodeCamp.
+            i live in London (UK). recent comp sci grad. passionate software engineer. stickler to best code practises. camper at freeCodeCamp.
           </section>
           <section id="p" class="projects">
             <h3>Projects</h3>
-            well, all my projects are on GitHub... be sure to check that
+            well, all my projects are on GitHub... be sure to check that!
           </section>
         </div>
         <div class="col-md-4"></div>
